[package]
name = "PerfectHashTest"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = "4.5.50"
dsi-progress-logger = "0.8.2"
fxhash = "0.2.1"
gxhash = "3.5.0"
ph = { version = "0.10.0", features = ["gxhash"] }
ptr_hash = "1.1.0"
rand = "0.9.2"
sux = "0.9.1"

[profile.release]
opt-level = 3            # like --release
lto = "fat"              # Full LTO
overflow-checks = false  # Disable integer overflow checks.
debug = true             # Include debug info.
debug-assertions = false # Enables debug assertions.
codegen-units = 1        # slower compile times, but maybe better perf
